correct icons, moved donut down, fixed wrapping hopefully

--- a/documents/css/company.css
+++ b/documents/css/company.css
@@ -135,6 +135,9 @@ div.pull-right.standard-button.green {
 	left: calc(100% - 150px);
 	position: absolute;
 }
+.span6 svg {
+	margin-top: 20px;
+	margin-bottom: -20px;
 
 .same-row .body-box > div:first-child > div > div {
 	top: 30px;
